# airflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  Dockerfile  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-and-upload-wheel.yaml  ci-tests.yaml  cicd.yaml  docker-build-push.yaml  python-wheel-publish.yaml  wheel-build-upload.yaml
bootstrap/: Brewfile  bootstrap.sh
bootstrap/modules/: git-config.sh
config/: .dockerignore
core/: config.py  utils.py
core/api/authentication/: api_key.py
core/api/client/: __init__.py  steam.py
core/dataset/: __init__.py  steam.py
core/dataset/bronze/: __init__.py  steam.py
core/dataset/gold/: __init__.py  steam.py
core/dataset/silver/: __init__.py  steam.py
core/endpoint/: __init__.py  steam.py
dags/steam/: dag.py  task.py
scripts/extract/: __init__.py
scripts/extract/steam/: __init__.py  owned_games.py  player_achievements.py
scripts/load/: __init__.py
scripts/load/steam/: dim_owned_games.py  fact_owned_games_tags.py
scripts/transform/: __init__.py
scripts/transform/steam/: owned_games.py
