[project]
name = "airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "azure-identity>=1.25.0",
    "azure-keyvault-secrets>=4.10.0",
    "pandera[polars]>=0.26.1",
    "polars>=1.33.1,<2.0",
    "pydantic>=2.11.9,<3.0",
]

[dependency-groups]
dev = [
    "apache-airflow==3.0.6",
    "mypy==1.18.2",
    "pandas==2.3.2",
    "pre-commit==4.3.0",
    "pyarrow==21.0.0",
    "pytest==8.4.2",
    "ruff==0.13.1",
    "types-requests==2.32.4.20250913",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "scripts",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
warn_return_any = true
warn_unused_ignores = true
strict_equality = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120
